--- a/blog.html
+++ b/blog.html
@@ -16,11 +16,12 @@
     </style>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-body-secondary">
       <div class="pt-4">
         <div class="row g-3">
+          <!-- 內容 -->
           <div class="col-12 col-sm-9">
-            <div class="p-3" style="background: lightblue">
+            <div class="p-3 bg-white">
               <h1>Bootstrap Grid：打造網頁佈局的完美解決方案</h1>
               <div class="paragraph">
                 嘿，大家好！今天我們要一起探索 Bootstrap 的 Grid（網格）系統，這是設計師和開發者的秘密武器，能夠輕鬆打造出令人驚艷的網頁佈局。快跟著我們一起踏上這趟有趣的旅程吧！
@@ -42,14 +43,11 @@
           </div>
           <!-- 側邊欄 -->
           <div class="col-12 col-sm-3">
-            <div class="vstack gap-3 p-3" style="background: lightgoldenrodyellow">
-              <div class="order-2">
-                <h2>加強網頁互動！Bootstrap Modal 教學</h2>
+            <div class="vstack gap-3 p-3 bg-white">
+              <div class="order-2 d-flex flex-column" style="height: 200px">
+                <h2 class="mb-auto">加強網頁互動！Bootstrap Modal 教學</h2>
                 <span>2023/5/19</span>
-                <div>
-                  讓我們一起探索 Bootstrap 的 Modal 功能，這是一個強大的互動元件，可以讓我們在網頁中顯示彈出視窗，實現更多元化的互動效果。在這篇教學中，我們將學習如何使用 Bootstrap的
-                  Modal，包括觸發機制、自訂樣式和動畫效果，讓我們的網頁更加生動有趣～
-                </div>
+                <div>10人看過</div>
               </div>
               <div class="order-3">
                 <h2>華麗又實用！打造漂亮按鈕的 Bootstrap 教學</h2>
@@ -59,10 +57,12 @@
                   Bootstrap的強大按鈕元件，我們可以輕鬆打造出各種吸引人的互動元素～
                 </div>
               </div>
-              <div class="vstack gap-1 order-1" style="height: 200px">
+              <div class="vstack gap-1 order-1 justify-content-between" style="height: 200px">
                 <h2>簡化表單設計！Bootstrap Form 教學</h2>
-                <span>2023/5/18</span>
-                <div>10人看過</div>
+                <div>
+                  <span>2023/5/18</span>
+                  <div>10人看過</div>
+                </div>
               </div>
             </div>
           </div>
