更新 position sticky

--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
           <!-- 側邊欄 -->
           <div class="col-12 col-sm-4 vstack gap-3">
             <!-- 更多文章 -->
-            <div class="vstack gap-3 p-3 bg-white rounded-4 border border-2 shadow flex-grow-0">
+            <div class="vstack gap-3 p-3 bg-white rounded-4 border border-2 shadow flex-grow-0 position-sticky top-0 z-1">
               <h2 class="text-center">更多文章</h2>
               <div class="order-2 d-flex flex-column" style="height: 120px">
                 <h5 class="mb-auto">加強網頁互動！Bootstrap Modal 教學</h5>
@@ -55,10 +55,7 @@
               <div class="order-3">
                 <h5 class="text-truncate" title="華麗又實用！打造漂亮按鈕的 Bootstrap 教學">華麗又實用！打造漂亮按鈕的 Bootstrap 教學</h5>
                 <small>2023/5/22</small>
-                <div>
-                  在這篇教學中，我們將一起探索 Bootstrap 的按鈕元件，讓我們的網頁華麗又實用！我們將學習如何使用不同的按鈕樣式、大小和狀態，並添加圖標或下拉選單等功能。透過
-                  Bootstrap的強大按鈕元件，我們可以輕鬆打造出各種吸引人的互動元素～
-                </div>
+                <div>在這篇教學中，我們將一起探索 Bootstrap 的按鈕元件，讓我們的網頁華麗又實用！</div>
               </div>
               <div class="vstack gap-1 order-1 justify-content-between" style="height: 160px">
                 <h5>簡化表單設計！Bootstrap Form 教學</h5>
