--- a/blog.html
+++ b/blog.html
@@ -40,40 +40,55 @@
                 類別則可以用於設定欄位的內容填充。除了基本的類別之外，Bootstrap Grid還提供了更多進階的選項和自訂性。你可以參考Bootstrap官方文件和範例，深入瞭解更多關於 Grid 系統的功能和用法。
                 嘿，現在是時候發揮你的創意，用 Bootstrap Grid打造出一個令人驚艷的網頁佈局吧！這個強大的工具將讓你的網頁更具結構性和視覺吸引力。加油，我們期待看到你的精彩作品！♪
               </div>
-              <table>
-                <thead>
-                  <tr>
-                    <th scope="col">編號</th>
-                    <th scope="col">元件</th>
-                    <th scope="col">英文名稱</th>
-                    <th scope="col">描述</th>
-                    <th scope="col">連結</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>網格</td>
-                    <td>Grid</td>
-                    <td>Bootstrap的佈局系統，用於創建靈活的網頁佈局</td>
-                    <td>https://getbootstrap.com/docs/5.3/layout/grid/</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>按鈕</td>
-                    <td>Button</td>
-                    <td>使用不同樣式和大小的按鈕增加互動性和功能</td>
-                    <td>https://getbootstrap.com/docs/5.3/components/buttons/</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>模式對話框</td>
-                    <td>Modal</td>
-                    <td>創建視窗對話框，用於顯示詳細內容或進行操作</td>
-                    <td>https://getbootstrap.com/docs/5.3/components/modal/</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="table-responsive mb-3">
+                <table class="table table-striped table-hover caption-top">
+                  <caption>
+                    這個表格提供了一個簡單的概覽，介紹了一些常見的 Bootstrap 元件及其功能：
+                  </caption>
+                  <thead>
+                    <tr class="text-nowrap">
+                      <th scope="col">編號</th>
+                      <th scope="col">元件</th>
+                      <th scope="col">英文名稱</th>
+                      <th scope="col">描述</th>
+                      <th scope="col">連結</th>
+                    </tr>
+                  </thead>
+                  <tbody class="table-group-divider">
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>網格</td>
+                      <td>Grid</td>
+                      <td>Bootstrap的佈局系統，用於創建靈活的網頁佈局</td>
+                      <td>https://getbootstrap.com/docs/5.3/layout/grid/</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>按鈕</td>
+                      <td>Button</td>
+                      <td>使用不同樣式和大小的按鈕增加互動性和功能</td>
+                      <td>https://getbootstrap.com/docs/5.3/components/buttons/</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>模式對話框</td>
+                      <td>Modal</td>
+                      <td>創建視窗對話框，用於顯示詳細內容或進行操作</td>
+                      <td>https://getbootstrap.com/docs/5.3/components/modal/</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <h2>留個言吧</h2>
+              <div class="mb-3">
+                <label for="moreInput" class="form-label">還想了解關於Bootstrap的...</label>
+                <input class="form-control" list="moreList" id="moreInput" placeholder="請輸入..." />
+                <datalist id="moreList">
+                  <option value="Grid">網格</option>
+                  <option value="Button">按鈕</option>
+                  <option value="Modal">模式對話框</option>
+                </datalist>
+              </div>
             </div>
           </div>
           <!-- 側邊欄 -->
