--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,7 @@
             <div class="p-3 bg-white rounded-4">
               <img src="https://pbs.twimg.com/media/FMsHg-cacAA2zMc.jpg" alt="" class="img-fluid" />
               <h1 class="text-bg-primary p-2 rounded-4">Bootstrap Grid：打造網頁佈局的完美解決方案</h1>
+              <!-- 內文 -->
               <div class="paragraph">
                 嘿，大家好！今天我們要一起探索<mark>Bootstrap的Grid（網格）系統</mark>，這是設計師和開發者的秘密武器，能夠輕鬆打造出令人驚艷的網頁佈局。快跟著我們一起踏上這趟有趣的旅程吧！
                 在網頁設計中，佈局是關鍵要素之一。Bootstrap的Grid系統提供了一套簡單而強大的工具，讓我們能夠有效地管理和組織網頁中的內容。
@@ -41,6 +42,7 @@
                 類別則可以用於設定欄位的內容填充。除了基本的類別之外，Bootstrap Grid還提供了更多進階的選項和自訂性。你可以參考Bootstrap官方文件和範例，深入瞭解更多關於 Grid 系統的功能和用法。
                 嘿，現在是時候發揮你的創意，用 Bootstrap Grid打造出一個令人驚艷的網頁佈局吧！這個強大的工具將讓你的網頁更具結構性和視覺吸引力。加油，我們期待看到你的精彩作品！♪
               </div>
+              <!-- 表格 -->
               <div class="table-responsive mb-3">
                 <table class="table table-striped table-hover caption-top table-primary">
                   <caption>
@@ -80,6 +82,37 @@
                   </tbody>
                 </table>
               </div>
+              <div class="accordion mb-3" id="accordion">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#gridAccordion" aria-expanded="true" aria-controls="gridAccordion">網格</button>
+                  </h2>
+                  <div id="gridAccordion" class="accordion-collapse collapse show" data-bs-parent="#accordion">
+                    <div class="accordion-body">Bootstrap的佈局系統，用於創建靈活的網頁佈局</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#buttonAccordion" aria-expanded="false" aria-controls="buttonAccordion">
+                      按鈕
+                    </button>
+                  </h2>
+                  <div id="buttonAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                    <div class="accordion-body">使用不同樣式和大小的按鈕增加互動性和功能</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#modalAccordion" aria-expanded="false" aria-controls="modalAccordion">
+                      模式對話框
+                    </button>
+                  </h2>
+                  <div id="modalAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                    <div class="accordion-body">創建視窗對話框，用於顯示詳細內容或進行操作</div>
+                  </div>
+                </div>
+              </div>
+              <!-- 表單 -->
               <form>
                 <h2 class="text-primary fs-4">留個言吧</h2>
                 <div class="form-floating mb-3">
