--- a/blog.html
+++ b/blog.html
@@ -82,12 +82,13 @@
                   </tbody>
                 </table>
               </div>
+              <!-- accordion -->
               <div class="accordion mb-3" id="accordion">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#gridAccordion" aria-expanded="true" aria-controls="gridAccordion">網格</button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#gridAccordion" aria-expanded="false" aria-controls="gridAccordion">網格</button>
                   </h2>
-                  <div id="gridAccordion" class="accordion-collapse collapse show" data-bs-parent="#accordion">
+                  <div id="gridAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
                     <div class="accordion-body">Bootstrap的佈局系統，用於創建靈活的網頁佈局</div>
                   </div>
                 </div>
@@ -113,7 +114,7 @@
                 </div>
               </div>
               <!-- 表單 -->
-              <form>
+              <form class="mb-3">
                 <h2 class="text-primary fs-4">留個言吧</h2>
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="nameInput" placeholder="" />
@@ -138,6 +139,9 @@
                 </div>
                 <button type="submit" class="btn btn-primary">送出</button>
               </form>
+              <!-- alert -->
+              <div id="alert"></div>
+              <button type="button" class="btn btn-primary" id="alertBtn">點我給你一個驚喜</button>
             </div>
           </div>
           <!-- 側邊欄 -->
@@ -185,10 +189,31 @@
         </div>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
+    <script>
+      const alertEl = document.getElementById('alert');
+      const alertBtnEl = document.getElementById('alertBtn');
+
+      const appendAlert = (message, type) => {
+        const wrapper = document.createElement('div');
+        wrapper.innerHTML = [
+          `<div class="alert alert-${type} alert-dismissible" role="alert">`,
+          `   <div>${message}</div>`,
+          '   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>',
+          '</div>',
+        ].join('');
+
+        alertEl.append(wrapper);
+      };
+
+      if (alertBtnEl) {
+        alertBtnEl.addEventListener('click', () => {
+          appendAlert('哈囉～～～', 'warning');
+        });
+      }
+    </script>
   </body>
 </html>
