--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,13 @@
     </style>
   </head>
   <body>
+    <!-- 集中定義 svg icon -->
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+      <symbol id="sunIcon" viewBox="0 0 16 16">
+        <path
+          d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708" />
+      </symbol>
+    </svg>
     <div class="container-fluid bg-body-secondary">
       <div class="pt-4">
         <div class="row g-3">
@@ -140,8 +147,15 @@
                 <button type="submit" class="btn btn-primary">送出</button>
               </form>
               <!-- alert -->
-              <div id="alert"></div>
-              <button type="button" class="btn btn-primary" id="alertBtn">點我給你一個驚喜</button>
+              <div class="mb-3">
+                <button type="button" class="btn btn-primary mb-3" id="alertBtn">
+                  <svg width="16" height="16" fill="currentColor" class="bi bi-brightness-high">
+                    <use xlink:href="#sunIcon" />
+                  </svg>
+                  點我給你一個驚喜
+                </button>
+                <div id="alert"></div>
+              </div>
             </div>
           </div>
           <!-- 側邊欄 -->
@@ -211,7 +225,7 @@
 
       if (alertBtnEl) {
         alertBtnEl.addEventListener('click', () => {
-          appendAlert('哈囉～～～', 'warning');
+          appendAlert('哈囉～～～', 'danger');
         });
       }
     </script>
