--- a/blog.html
+++ b/blog.html
@@ -148,7 +148,7 @@
               </form>
               <!-- alert -->
               <div class="mb-3">
-                <button type="button" class="btn btn-primary mb-3" id="alertBtn">
+                <button type="button" class="btn btn-primary mb-3 hstack gap-1 align-items-center" id="alertBtn">
                   <svg width="16" height="16" fill="currentColor" class="bi bi-brightness-high">
                     <use xlink:href="#sunIcon" />
                   </svg>
@@ -174,7 +174,12 @@
                 <div>在這篇教學中，我們將一起探索 Bootstrap 的按鈕元件，讓我們的網頁華麗又實用！</div>
               </div>
               <div class="vstack gap-1 order-1 justify-content-between" style="height: 160px">
-                <h5>簡化表單設計！Bootstrap Form 教學</h5>
+                <div>
+                  <h5 class="position-relative d-inline-block">
+                    簡化表單設計！Bootstrap Form 教學
+                    <span class="badge text-bg-warning position-absolute top-0 start-100 translate-middle-y">NEW</span>
+                  </h5>
+                </div>
                 <div>
                   <small>2023/5/18</small>
                   <div>10人看過</div>
