--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,14 @@
           <div class="col-12 col-sm-8">
             <div class="p-3 bg-white rounded-4">
               <img src="https://pbs.twimg.com/media/FMsHg-cacAA2zMc.jpg" alt="" class="img-fluid" />
+              <!-- breadcrumb -->
+              <nav aria-label="breadcrumb" class="mt-3">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="#">首頁</a></li>
+                  <li class="breadcrumb-item"><a href="#">教學</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Bootstrap Grid</li>
+                </ol>
+              </nav>
               <h1 class="text-bg-primary p-2 rounded-4">Bootstrap Grid：打造網頁佈局的完美解決方案</h1>
               <!-- 內文 -->
               <div class="paragraph">
@@ -177,7 +185,7 @@
                 <div>
                   <h5 class="position-relative d-inline-block">
                     簡化表單設計！Bootstrap Form 教學
-                    <span class="badge text-bg-warning position-absolute top-0 start-100 translate-middle-y">NEW</span>
+                    <span class="badge text-bg-warning position-absolute top-0 start-100 translate-middle-y rounded-pill">NEW</span>
                   </h5>
                 </div>
                 <div>
