--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,15 @@
                   <li class="breadcrumb-item active" aria-current="page">Bootstrap Grid</li>
                 </ol>
               </nav>
+              <!-- dropdown -->
+              <div class="dropdown mb-3">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">文章分類</button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">教學</a></li>
+                  <li><a class="dropdown-item" href="#">資源分享</a></li>
+                  <li><a class="dropdown-item" href="#">實作範例</a></li>
+                </ul>
+              </div>
               <h1 class="text-bg-primary p-2 rounded-4">Bootstrap Grid：打造網頁佈局的完美解決方案</h1>
               <!-- 內文 -->
               <div class="paragraph">
