--- a/blog.html
+++ b/blog.html
@@ -203,6 +203,23 @@
                 </div>
               </div>
             </div>
+            <div class="vstack gap-3 p-3 bg-white rounded-4 border border-2 text-center flex-grow-0 z-0">
+              <h2 class="text-primary fs-4">文章分類</h2>
+              <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center active">
+                  教學
+                  <span class="badge text-bg-warning rounded-pill">14</span>
+                </li>
+                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                  資源分享
+                  <span class="badge text-bg-warning rounded-pill">2</span>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                  實作範例
+                  <span class="badge text-bg-warning rounded-pill">1</span>
+                </a>
+              </ul>
+            </div>
             <!-- 關於我 -->
             <!-- d-flex flex-column -->
             <div class="vstack gap-3 p-3 bg-white rounded-4 border border-2 text-center flex-grow-0">
