--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
               </div>
               <h1 class="text-bg-primary p-2 rounded-4">Bootstrap Grid：打造網頁佈局的完美解決方案</h1>
               <!-- 內文 -->
-              <div class="paragraph">
+              <div class="paragraph mb-3">
                 嘿，大家好！今天我們要一起探索<mark>Bootstrap的Grid（網格）系統</mark>，這是設計師和開發者的秘密武器，能夠輕鬆打造出令人驚艷的網頁佈局。快跟著我們一起踏上這趟有趣的旅程吧！
                 在網頁設計中，佈局是關鍵要素之一。Bootstrap的Grid系統提供了一套簡單而強大的工具，讓我們能夠有效地管理和組織網頁中的內容。
                 首先，我們要認識兩個基本元素：列和欄。列就像是網格中的一行，而欄則是列中的一個小單位。透過列和欄的組合，我們可以建立出彈性且有結構的網頁佈局。
@@ -66,77 +66,99 @@
                 類別則可以用於設定欄位的內容填充。除了基本的類別之外，Bootstrap Grid還提供了更多進階的選項和自訂性。你可以參考Bootstrap官方文件和範例，深入瞭解更多關於 Grid 系統的功能和用法。
                 嘿，現在是時候發揮你的創意，用 Bootstrap Grid打造出一個令人驚艷的網頁佈局吧！這個強大的工具將讓你的網頁更具結構性和視覺吸引力。加油，我們期待看到你的精彩作品！♪
               </div>
-              <!-- 表格 -->
-              <div class="table-responsive mb-3">
-                <table class="table table-striped table-hover caption-top table-primary">
-                  <caption>
-                    這個表格提供了一個簡單的概覽，介紹了一些常見的 Bootstrap 元件及其功能：
-                  </caption>
-                  <thead>
-                    <tr class="text-nowrap">
-                      <th scope="col">編號</th>
-                      <th scope="col">元件</th>
-                      <th scope="col">英文名稱</th>
-                      <th scope="col">描述</th>
-                      <th scope="col">連結</th>
-                    </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>網格</td>
-                      <td>Grid</td>
-                      <td>Bootstrap的佈局系統，用於創建靈活的網頁佈局</td>
-                      <td>https://getbootstrap.com/docs/5.3/layout/grid/</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>按鈕</td>
-                      <td>Button</td>
-                      <td>使用不同樣式和大小的按鈕增加互動性和功能</td>
-                      <td>https://getbootstrap.com/docs/5.3/components/buttons/</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>模式對話框</td>
-                      <td>Modal</td>
-                      <td>創建視窗對話框，用於顯示詳細內容或進行操作</td>
-                      <td>https://getbootstrap.com/docs/5.3/components/modal/</td>
-                    </tr>
-                  </tbody>
-                </table>
+              <!-- 頁籤 -->
+              <ul class="nav nav-tabs" id="tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="tableTab" data-bs-toggle="tab" data-bs-target="#tableTabPane" type="button" role="tab" aria-controls="tableTabPane" aria-selected="true">
+                    表格
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="accordionTab" data-bs-toggle="tab" data-bs-target="#accordionTabPane" type="button" role="tab" aria-controls="accordionTabPane" aria-selected="false">
+                    手風琴
+                  </button>
+                </li>
+              </ul>
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="tableTabPane" role="tabpanel" aria-labelledby="tableTab" tabindex="0">
+                  <!-- 表格 -->
+                  <div class="table-responsive mb-3">
+                    <table class="table table-striped table-hover caption-top table-primary">
+                      <caption>
+                        這個表格提供了一個簡單的概覽，介紹了一些常見的 Bootstrap 元件及其功能：
+                      </caption>
+                      <thead>
+                        <tr class="text-nowrap">
+                          <th scope="col">編號</th>
+                          <th scope="col">元件</th>
+                          <th scope="col">英文名稱</th>
+                          <th scope="col">描述</th>
+                          <th scope="col">連結</th>
+                        </tr>
+                      </thead>
+                      <tbody class="table-group-divider">
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>網格</td>
+                          <td>Grid</td>
+                          <td>Bootstrap的佈局系統，用於創建靈活的網頁佈局</td>
+                          <td>https://getbootstrap.com/docs/5.3/layout/grid/</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>按鈕</td>
+                          <td>Button</td>
+                          <td>使用不同樣式和大小的按鈕增加互動性和功能</td>
+                          <td>https://getbootstrap.com/docs/5.3/components/buttons/</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td>模式對話框</td>
+                          <td>Modal</td>
+                          <td>創建視窗對話框，用於顯示詳細內容或進行操作</td>
+                          <td>https://getbootstrap.com/docs/5.3/components/modal/</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="tab-pane fade" id="accordionTabPane" role="tabpanel" aria-labelledby="accordionTab" tabindex="0">
+                  <!-- accordion -->
+                  <div class="accordion mb-3" id="accordion">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#gridAccordion" aria-expanded="false" aria-controls="gridAccordion">
+                          網格
+                        </button>
+                      </h2>
+                      <div id="gridAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                        <div class="accordion-body">Bootstrap的佈局系統，用於創建靈活的網頁佈局</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#buttonAccordion" aria-expanded="false" aria-controls="buttonAccordion">
+                          按鈕
+                        </button>
+                      </h2>
+                      <div id="buttonAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                        <div class="accordion-body">使用不同樣式和大小的按鈕增加互動性和功能</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#modalAccordion" aria-expanded="false" aria-controls="modalAccordion">
+                          模式對話框
+                        </button>
+                      </h2>
+                      <div id="modalAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                        <div class="accordion-body">創建視窗對話框，用於顯示詳細內容或進行操作</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <!-- accordion -->
-              <div class="accordion mb-3" id="accordion">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#gridAccordion" aria-expanded="false" aria-controls="gridAccordion">網格</button>
-                  </h2>
-                  <div id="gridAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
-                    <div class="accordion-body">Bootstrap的佈局系統，用於創建靈活的網頁佈局</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#buttonAccordion" aria-expanded="false" aria-controls="buttonAccordion">
-                      按鈕
-                    </button>
-                  </h2>
-                  <div id="buttonAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
-                    <div class="accordion-body">使用不同樣式和大小的按鈕增加互動性和功能</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#modalAccordion" aria-expanded="false" aria-controls="modalAccordion">
-                      模式對話框
-                    </button>
-                  </h2>
-                  <div id="modalAccordion" class="accordion-collapse collapse" data-bs-parent="#accordion">
-                    <div class="accordion-body">創建視窗對話框，用於顯示詳細內容或進行操作</div>
-                  </div>
-                </div>
-              </div>
+
               <!-- 表單 -->
               <form class="mb-3">
                 <h2 class="text-primary fs-4">留個言吧</h2>
@@ -203,6 +225,7 @@
                 </div>
               </div>
             </div>
+            <!-- 文章分類 -->
             <div class="vstack gap-3 p-3 bg-white rounded-4 border border-2 text-center flex-grow-0 z-0">
               <h2 class="text-primary fs-4">文章分類</h2>
               <ul class="list-group">
