--- a/blog.html
+++ b/blog.html
@@ -158,9 +158,50 @@
                   </div>
                 </div>
               </div>
-
+              <div class="row g-3">
+                <div class="col-12 col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <h6 class="card-title">加強網頁互動！Bootstrap Modal 教學</h6>
+                      <div class="card-subtitle text-body-secondary">2023/5/19</div>
+                      <p class="card-text">
+                        讓我們一起探索 Bootstrap 的 Modal 功能，這是一個強大的互動元件，可以讓我們在網頁中顯示彈出視窗，實現更多元化的互動效果。在這篇教學中，我們將學習如何使用 Bootstrap的
+                        Modal，包括觸發機制、自訂樣式和動畫效果，讓我們的網頁更加生動有趣～
+                      </p>
+                      <a href="#" class="btn btn-primary">查看更多</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <h6 class="card-title">華麗又實用！打造漂亮按鈕的 Bootstrap 教學</h6>
+                      <div class="card-subtitle text-body-secondary">2023/5/22</div>
+                      <p class="card-text">
+                        在這篇教學中，我們將一起探索 Bootstrap 的按鈕元件，讓我們的網頁華麗又實用！我們將學習如何使用不同的按鈕樣式、大小和狀態，並添加圖標或下拉選單等功能。透過
+                        Bootstrap的強大按鈕元件，我們可以輕鬆打造出各種吸引人的互動元素～
+                      </p>
+                      <a href="#" class="btn btn-primary">查看更多</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <h6 class="card-title">簡化表單設計！Bootstrap Form 教學</h6>
+                      <div class="card-subtitle text-body-secondary">2023/5/18</div>
+                      <p class="card-text">
+                        讓我們來簡化表單設計的過程吧！在這篇教學中，我們將探索 Bootstrap 的 Form
+                        元件，讓表單設計變得輕鬆又美觀。我們將學習如何使用不同的表單控制項、佈局工具和驗證功能，提升用戶體驗並節省開發時間。透過 Bootstrap 的強大 Form
+                        元件，我們可以輕鬆打造出專業又方便使用的表單～
+                      </p>
+                      <a href="#" class="btn btn-primary">查看更多</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- 表單 -->
-              <form class="mb-3">
+              <form class="my-3">
                 <h2 class="text-primary fs-4">留個言吧</h2>
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="nameInput" placeholder="" />
