--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,16 @@
                 類別則可以用於設定欄位的內容填充。除了基本的類別之外，Bootstrap Grid還提供了更多進階的選項和自訂性。你可以參考Bootstrap官方文件和範例，深入瞭解更多關於 Grid 系統的功能和用法。
                 嘿，現在是時候發揮你的創意，用 Bootstrap Grid打造出一個令人驚艷的網頁佈局吧！這個強大的工具將讓你的網頁更具結構性和視覺吸引力。加油，我們期待看到你的精彩作品！♪
               </div>
+              <!-- 頁碼 -->
+              <nav>
+                <ul class="pagination">
+                  <li class="page-item"><span class="page-link disabled">上一頁</span></li>
+                  <li class="page-item"><span class="page-link active">1</span></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item"><a class="page-link" href="#">下一頁</a></li>
+                </ul>
+              </nav>
               <!-- 頁籤 -->
               <ul class="nav nav-tabs" id="tab" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -158,9 +168,10 @@
                   </div>
                 </div>
               </div>
+              <!-- 卡片 -->
               <div class="row g-3">
                 <div class="col-12 col-md-6">
-                  <div class="card">
+                  <div class="card position-relative">
                     <div class="card-body">
                       <h6 class="card-title">加強網頁互動！Bootstrap Modal 教學</h6>
                       <div class="card-subtitle text-body-secondary">2023/5/19</div>
@@ -168,7 +179,7 @@
                         讓我們一起探索 Bootstrap 的 Modal 功能，這是一個強大的互動元件，可以讓我們在網頁中顯示彈出視窗，實現更多元化的互動效果。在這篇教學中，我們將學習如何使用 Bootstrap的
                         Modal，包括觸發機制、自訂樣式和動畫效果，讓我們的網頁更加生動有趣～
                       </p>
-                      <a href="#" class="btn btn-primary">查看更多</a>
+                      <a href="#" class="btn btn-primary stretched-link">查看更多</a>
                     </div>
                   </div>
                 </div>
@@ -188,14 +199,20 @@
                 <div class="col-12 col-md-6">
                   <div class="card">
                     <div class="card-body">
-                      <h6 class="card-title">簡化表單設計！Bootstrap Form 教學</h6>
-                      <div class="card-subtitle text-body-secondary">2023/5/18</div>
+                      <h6 class="card-title">
+                        <span class="placeholder col-7"></span>
+                      </h6>
+                      <div class="card-subtitle">
+                        <span class="placeholder col-3"></span>
+                      </div>
                       <p class="card-text">
-                        讓我們來簡化表單設計的過程吧！在這篇教學中，我們將探索 Bootstrap 的 Form
-                        元件，讓表單設計變得輕鬆又美觀。我們將學習如何使用不同的表單控制項、佈局工具和驗證功能，提升用戶體驗並節省開發時間。透過 Bootstrap 的強大 Form
-                        元件，我們可以輕鬆打造出專業又方便使用的表單～
+                        <span class="placeholder col-7"></span>
+                        <span class="placeholder col-4"></span>
+                        <span class="placeholder col-4"></span>
+                        <span class="placeholder col-6"></span>
+                        <span class="placeholder col-8"></span>
                       </p>
-                      <a href="#" class="btn btn-primary">查看更多</a>
+                      <a href="#" class="btn btn-primary placeholder col-3 disabled"></a>
                     </div>
                   </div>
                 </div>
