--- a/blog.html
+++ b/blog.html
@@ -199,13 +199,13 @@
                 <div class="col-12 col-md-6">
                   <div class="card">
                     <div class="card-body">
-                      <h6 class="card-title">
+                      <h6 class="card-title placeholder-wave">
                         <span class="placeholder col-7"></span>
                       </h6>
-                      <div class="card-subtitle">
-                        <span class="placeholder col-3"></span>
+                      <div class="card-subtitle placeholder-wave">
+                        <span class="placeholder col-3 placeholder-sm"></span>
                       </div>
-                      <p class="card-text">
+                      <p class="card-text placeholder-wave">
                         <span class="placeholder col-7"></span>
                         <span class="placeholder col-4"></span>
                         <span class="placeholder col-4"></span>
@@ -216,6 +216,10 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <!-- 進度條 -->
+              <div class="progress my-3" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" style="width: 75%"></div>
               </div>
               <!-- 表單 -->
               <form class="my-3">
