--- a/blog.html
+++ b/blog.html
@@ -257,6 +257,18 @@
                 </button>
                 <div id="alert"></div>
               </div>
+              <!-- toast -->
+              <button type="button" class="btn btn-danger" id="toastBtn">toast想跟你打招呼</button>
+              <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                  <div class="toast-header">
+                    <strong class="me-auto">Toast說</strong>
+                    <small>11分鐘前</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                  </div>
+                  <div class="toast-body">你好呀！！！</div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- 側邊欄 -->
@@ -353,5 +365,6 @@
         });
       }
     </script>
+    <script></script>
   </body>
 </html>
