--- a/blog.html
+++ b/blog.html
@@ -272,7 +272,11 @@
                 </div>
               </div>
               <!-- popover -->
-              <button type="button" class="btn btn-success" data-bs-toggle="popover" data-bs-title="Popover說" data-bs-content="嗨～～～">popover想跟你打招呼</button>
+              <div class="mb-3">
+                <button type="button" class="btn btn-success" data-bs-toggle="popover" data-bs-title="Popover說" data-bs-content="嗨～～～">popover想跟你打招呼</button>
+              </div>
+              <!-- modal -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal">modal想跟你打招呼</button>
             </div>
           </div>
           <!-- 側邊欄 -->
@@ -343,6 +347,18 @@
         </div>
       </div>
     </div>
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="modalLabel">Modal說</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">哈哈哈</div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -383,6 +399,10 @@
     <script>
       const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
       const popoverList = [...popoverTriggerList].map((item) => new bootstrap.Popover(item));
+    </script>
+    <script>
+      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+      const tooltipList = [...tooltipTriggerList].map((item) => new bootstrap.Tooltip(item));
     </script>
   </body>
 </html>
